# trlx-t5

./: .gitignore  data_process.ipynb  setup.cfg
configs/: ppo_config.yml
trlx/: trlx.py
trlx/model/: accelerate_base_model.py  accelerate_ppo_model.py
trlx/model/nn/: ppo_models.py
trlx/orchestrator/: ppo_orchestrator.py
trlx/pipeline/: offline_pipeline.py
ul2_RL/: rl_ul2.py
