[metadata]
name = trlx
author = Alex Havrilla
version = 0.3.0
url = https://github.com/CarperAI/trlx
description = A repo for distributed training of language models with Reinforcement Learning via Human Feedback (RLHF)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    accelerate>=0.12.0
    datasets
    einops>=0.4.1
    torchtyping
    tqdm
    wandb
    ray>=2.0.1
    tabulate>=0.9.0
    networkx

[options.extras_require]
dev =
    black
    isort
    flake8
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    tests*
